# patchforge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
engines/: build_win.sh
engines/linux-x64/: hdiffz  hpatchz  jdiff  jptch  xdelta3
src/cli/: main.py
src/core/: app_settings.py  compression.py  exe_packager.py  fmt.py  patch_builder.py  pe_icon.py  project.py  recent_files.py  repack_builder.py  repack_project.py  verification.py  xpack_archive.py
src/core/archive/: _extras.py  acf.py  appinfo.py  auth.py  bbcode.py  cli_progress.py  compress.py  credentials.py  depots_ini.py  download.py  errors.py  notify.py  poll.py  project.py  runner.py  sevenzip.py  upload.py  utils.py
src/core/archive/crack/: coldclient.py  gse.py
src/core/archive/crack/unstub/: __init__.py  base_unpacker.py  crypto.py  pe.py  utils.py  x86.py
src/core/archive/crack/unstub/unpackers/: __init__.py  variant20.py  variant21.py  variant30.py  variant31.py
src/core/archive/data/: template.txt
src/core/engines/: __init__.py  base.py  dir_format.py  hdiffpatch.py  jojodiff.py  xdelta3.py
src/gui/: archive_pages.py  archive_pages_apps.py  archive_pages_bbcode.py  archive_pages_creds.py  archive_pages_history.py  archive_pages_simple.py  archive_panel.py  archive_run_view.py  archive_worker.py  main_window.py  theme.py
stub/: Makefile  build_deps.sh  dir_patch_format.h  hdiffpatch_stub.c  installer_stub.c  jojodiff_stub.c  path_safe.h  stub_common.h  uninstaller_stub.c  xdelta3_stub.c
tests/: conftest.py  test_archive_depot.py  test_archive_phase1.py  test_archive_phase2.py  test_archive_phase3.py  test_archive_phase4.py  test_archive_phase5.py  test_archive_phase6.py  test_component_deps.py  test_multi_part.py  test_patch_builder.py
tests/cli/: test_archive_commands.py  test_archive_depot.py
tests/core/archive/: test_acf.py  test_appinfo.py  test_bbcode.py  test_cli_progress.py  test_compress.py  test_credentials.py  test_depots_ini.py  test_download.py  test_extras.py  test_notify.py  test_poll.py  test_project.py  test_runner.py  test_sevenzip.py  test_upload.py  test_utils.py
tests/core/archive/crack/: test_gse.py  test_unstub.py
tests/gui/: test_archive_pages_history.py  test_archive_panel.py  test_archive_run_view.py  test_archive_worker.py
