[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "patchforge"
version = "0.1.0"
description = "Video game binary patch maker — xdelta3, JojoDiff, HDiffPatch"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
]

[project.scripts]
patchforge = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
