[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchforge"
version = "0.1.0"
description = "Video game binary patch maker — xdelta3, JojoDiff, HDiffPatch"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "crcmod>=1.7",
]

[project.scripts]
patchforge = "src.cli.main:run_cli"
patchforge-gui = "src.gui.main_window:run_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
