[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchforge"
version = "0.1.0"
description = "Video game binary patch maker — xdelta3, JojoDiff, HDiffPatch"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "crcmod>=1.7",
]

# Archive mode (Steam depot downloader, ports SteamArchiver into PatchForge).
# Pulls in heavy deps not needed by Update Patch / Repack modes; opt in via:
#   pip install patchforge[archive]
# `steam[client]` is sourced from a git fork (Lopsider's) — install it
# separately first if you're not using the conda env recipe.  libarchive-c
# also requires the system libarchive library on pip-only installs.
[project.optional-dependencies]
archive = [
    "py7zr",
    "libarchive-c",
    "requests",
    "requests-toolbelt",
    "privatebinapi",
    "origamibot",
    "discord-webhook",
    "zstandard",
    "qrcode",
]

[project.scripts]
patchforge = "src.cli.main:run_cli"
patchforge-gui = "src.gui.main_window:run_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Don't lint the vendored SteamStub unpackers — they are imported as-is from
# upstream SteamArchiver/crack/unstub/ and any cosmetic fixes here would
# diverge them from upstream and complicate re-vendoring future bug fixes.
[tool.ruff]
extend-exclude = ["src/core/archive/crack/unstub"]
